config() Main docker files reviewed