@@ -1,13 +1,14 @@
 -server
--Xmx16G
--XX:-UseBiasedLocking
--XX:+UseG1GC
+-XX:InitialRAMPercentage=80
+-XX:MaxRAMPercentage=80
 -XX:G1HeapRegionSize=32M
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
--XX:+UseGCOverheadLimit
 -XX:+ExitOnOutOfMemoryError
--XX:ReservedCodeCacheSize=512M
+-XX:-OmitStackTraceInFastThrow
+-XX:ReservedCodeCacheSize=256M
+-XX:PerMethodRecompilationCutoff=10000
+-XX:PerBytecodeRecompilationCutoff=10000
 -Djdk.attach.allowAttachSelf=true
 -Djdk.nio.maxCachedBufferSize=2000000
 
